--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nextjs-portal {
+    display: none;
 }
 
 @layer base {
